--- a/package.json
+++ b/package.json
@@ -13,31 +13,32 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.1.5",
+    "@prisma/client": "^6.0.0",
+    "@tailwindcss/postcss": "^4.1.18",
+    "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
+    "dexie": "^4.0.8",
     "next": "^15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "@prisma/client": "^6.0.0",
-    "dexie": "^4.0.8",
     "ulid": "^2.3.0",
-    "crypto-js": "^4.2.0",
-    "@headlessui/react": "^2.2.0",
-    "@heroicons/react": "^2.1.5",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5.6.3",
+    "@tailwindcss/forms": "^0.5.9",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^22.9.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "@types/crypto-js": "^4.2.2",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.15.0",
     "eslint-config-next": "^15.1.0",
-    "tailwindcss": "^4.0.0-alpha.25",
-    "prisma": "^6.0.0",
-    "@tailwindcss/forms": "^0.5.9",
     "postcss": "^8.4.49",
-    "autoprefixer": "^10.4.20"
+    "prisma": "^6.0.0",
+    "tailwindcss": "^4.0.0-alpha.25",
+    "typescript": "^5.6.3"
   }
 }
